fix(carousel): tabs spacing

--- a/src/common/scss/utility/swiper-shidoka.scss
+++ b/src/common/scss/utility/swiper-shidoka.scss
@@ -46,7 +46,7 @@
   &.tabs {
     @media (min-width: 42rem) {
       order: -1;
-      gap: 2px;
+      gap: 24px;
       overflow-x: auto;
     }
   }
